Do not emitResult multiple times

May lead to a crash if the caller is not ready for that.

Also moved m_jobs.removeAll(job) closed to ends of methods to avoid the
situation when m_jobs is empty but there is something left to do.

BUG: 345358